modif moment.js

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -84,8 +84,7 @@
 			})	
 			
 			.when('/fail', {
-				controller: 'FailController',
-				templateUrl: 'fail.html',
+				templateUrl: "<%= asset_path('Templates/fail.html') %>",
 			})
 
         	.when('/cart', {
