--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,12 @@
     <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => "reload"  %>
     <%= javascript_include_tag 'application', "data-turbolinks-track" => "reload" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" %>
-    <%= javascript_include_tag "//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
-    <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js" %>
-    <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js" %>
+    <%= javascript_include_tag "https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.min.js.map" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.min.js" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.17/angular-filter.min.js" %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/shim' %>
