--- a/app/assets/partials/services/fruitsListe.js.erb
+++ b/app/assets/partials/services/fruitsListe.js.erb
@@ -1,22 +1,20 @@
-marketApp.factory('myFruitsliste', ['$q', '$http', function myFruitsliste($q, $http) {
+marketApp.factory('myFruitsliste', ['$q', '$http', '$location', function myFruitsliste($q, $http, $location) {
 	//Requete https permettant de recupérer la liste des fruits et légumes
 	//Liste des fruits et légumes récupérée via les données publiques du site Francagri
 	var deferred = $q.defer();
-
-    //PRODUCTION
-    var BASE_URL = 'https://young-meadow-31748.herokuapp.com/agrimer';
-
-    //TEST
-    //var BASE_URL = 'http://localhost:3000/agrimer';
+    var url = $location.absUrl()
+    var BASE_URL = url + 'agrimer'
 
     $http({
         method: 'GET',
-        //url: 'http://localhost:3000/agrimer',
         url: BASE_URL,
         responseType: 'json'
-    }).then(function(response) {
-    //        console.log(response.data);
-			deferred.resolve(response.data);
+    })
+    .then(function onSuccess(response) {
+		deferred.resolve(response.data);
+    })
+    .catch(function onError(error) {
+        console.log(error);
     });
 	
 	return deferred.promise;
