Get user ip address

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -25,7 +25,7 @@
 	    }, function (error) {
             // do something about the error
             //console.log("Error Log",error.statusText);
-            console.info("Tchopers have to login...");
+            console.info("Tchopers have to login first...");
         });
 	}]);
 
