--- a/app/views/pages/propos.html.erb
+++ b/app/views/pages/propos.html.erb
@@ -1,7 +1,7 @@
     <h1>À Propos de nous</h1>
     <p>
-      <a href="http://railstutorial.org/">Le Tutoriel Ruby on Rails</a>
-      est un projet de livre et de screencasts pour apprendre le développement web
-      avec <a href="http://rubyonrails.org/">Ruby on Rails</a>. Ceci
+      <a href="http://railstutorial.org/">Tchopmygrinds</a>
+      est un projet qui vise à mettre en relation les vendeurs de fruits légumes et leurs futurs clients
+      avec <a href="http://rubyonrails.org/">Tchopmygrinds</a>. Ceci
       est l'Application Exemple du tutoriel.
     </p>
