Affichage boutiques non affiliées sur la Map

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -99,7 +99,19 @@
 		
 	}]);
 
-
+    //marketApp.controller("ReloadPageCtrl", function($location, $scope, $http) {
+    //    var url = $location.absUrl()
+    //    $scope.reload = function () {
+    //        $http.get(url).
+    //        success(function (data) {
+    //            //$scope.todos = data.todos;
+    //            console.log(data)
+    //        });
+    //
+    //    };
+    //    $scope.reload();
+    //    $interval($scope.reload, 5000);
+    //});
 
 //marketApp.controller("CommerceDetailCtrl", function($routeParams, $scope, Commerce) {
 //  Commerce.get($routeParams.id).then(function(commerce) {
