implementation watchposition geolocalisation

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -69,6 +69,9 @@
 					},
 					markers: function (myMarkers) {
 						return myMarkers;
+					},
+					dynamicposition: function (myPosition) {
+						return myPosition;
 					}
 				}
 			})
